tests/snapshots/examples_fixtures/type_system__failing__02_runtime_boundary_arg_violation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/02_runtime_boundary_arg_violation.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/02_runtime_boundary_arg_violation.flx:12:1
   |
12 | typed_add(dynamic, 1)
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- expected Int, found String


--> compiler error[E055]: TYPE MISMATCH

Expected Int, got String.

  --> examples/type_system/failing/02_runtime_boundary_arg_violation.flx:12:11
   |
12 | typed_add(dynamic, 1)
   |           ^^^^^^^
   |           ------- argument type is known at compile time

Help:
  argument #1 does not match function contract

Found 2 errors.
== stdout ==
<not executed>
